# Trivent

./: .clang-format  .clang-tidy  .gitignore  AsicProcessor.xml  CMakeLists.txt  DartConfiguration.tcl  EventDisplay.C  EventDisplay.h  GangaCheckerMoveFileOnGrid.py  Makefile  Readme.md  Trivent.py  TriventProcessor.xml  cmake_install.cmake  cmake_uninstall.cmake  config_trivent.py  dbUtils.py  run_marlin.py
DifGeom/: #xmltest.xml#  TRIVENTsdhcal_07_09_2017.xml  difList.xml  difList.xml~  m3_bonneteau.xml  m3_bonneteau.xml~  m3_bonneteau_avril2015.xml  m3_bonneteau_avril2015.xml~  m3_oct2015.xml  sdhcal_07_09_2017.xml  sdhcal_SPS_09_2018.json  xmltest.xml~
EventBuilder/: CMakeLists.txt  Makefile  cmake_install.cmake
EventBuilder/include/: DIFSlowControl.h  GainCorrect.h  Mapping.h  Mapping.hh  NoiseProc.hh  NoiseProc.hh~  TriventProc.hh  TriventProcNoise.hh
EventBuilder/src/: DIFSlowControl.cc  DIFUnpacker.cc  GainCorrect.cc  NoiseProc.cc  NoiseProc.cc~  SDHCAL_RawData_Processor.cc  TriventProc.cc  TriventProcNoise.cc~
SDHCALReco/: CMakeLists.txt
SDHCALReco/src/: rootMaker.cc
cmake/: clang-cxx-dev-tools.cmake
config/: TriventProcessor.xml  config_trivent.py  config_triventLocal.py  config_triventLocalEcal.py
nlohmann_json/: CMakeLists.txt
python/: FindCommonEvent.py  GangaCheckerMoveFileOnGrid.py  dbUtils.py  marlin.py  pyMarlin.py  run_marlin.py  setup.py
script/: runMarlin.py  run_noise.sh  run_noise.sh~  run_streamout.sh  run_trivent_byme.sh  run_trivent_byme.sh~  run_trivent_bymeArnaud.sh
steer/: LCIO_runProcess.xml  Trivent.py  runTrivent.sh  runTriventGrid.py
